--- a/antora/components/refguide-index/modules/applib/pages/index/services/appfeat/ApplicationFeatureRepository.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/services/appfeat/ApplicationFeatureRepository.adoc
@@ -18,6 +18,7 @@ interface ApplicationFeatureRepository {
   Collection<ApplicationFeature> allNamespaces()
   Collection<ApplicationFeature> allTypes()
   Collection<ApplicationFeature> allMembers()
+  SortedSet<ApplicationFeatureId> propertyIdsFor(LogicalType logicalType)
 }
 ----
 
