--- a/antora/components/refguide-index/modules/extensions/pages/index/commandlog/applib/contributions/HasUsername_recentCommandsByUser.adoc
+++ b/antora/components/refguide-index/modules/extensions/pages/index/commandlog/applib/contributions/HasUsername_recentCommandsByUser.adoc
@@ -8,7 +8,7 @@
 ----
 class HasUsername_recentCommandsByUser {
   HasUsername_recentCommandsByUser(HasUsername hasUsername)
-  List<CommandLogEntry> coll()
+  List<? extends CommandLogEntry> coll()
   boolean hideColl()
 }
 ----
