--- a/antora/components/refguide-index/modules/extensions/pages/index/commandlog/applib/contributions/Object_recentCommands.adoc
+++ b/antora/components/refguide-index/modules/extensions/pages/index/commandlog/applib/contributions/Object_recentCommands.adoc
@@ -9,7 +9,7 @@ This mixin contributes a `recentCommands` action to any domain object (unless al
 .Object_recentCommands.java
 ----
 class Object_recentCommands {
-  List<CommandLogEntry> act()
+  List<? extends CommandLogEntry> act()
   boolean hideAct()     // <.>
 }
 ----
@@ -17,7 +17,7 @@ class Object_recentCommands {
 <.> xref:#hideAct_[hideAct()]
 +
 --
-Hide if the mixee is itself xref:refguide:applib:index/mixins/system/HasInteractionId.adoc[HasInteractionId] (commands don't have commands).
+Hide if the mixee itself implements xref:refguide:applib:index/mixins/system/HasInteractionId.adoc[HasInteractionId] . (commands don't have commands).
 --
 
 == Members
@@ -25,4 +25,4 @@ Hide if the mixee is itself xref:refguide:applib:index/mixins/system/HasInteract
 [#hideAct_]
 === hideAct()
 
-Hide if the mixee is itself xref:refguide:applib:index/mixins/system/HasInteractionId.adoc[HasInteractionId] (commands don't have commands).
+Hide if the mixee itself implements xref:refguide:applib:index/mixins/system/HasInteractionId.adoc[HasInteractionId] . (commands don't have commands).
