--- a/antora/components/refguide-index/modules/extensions/pages/index/commandlog/jpa/IsisModuleExtCommandLogPersistenceJpa.adoc
+++ b/antora/components/refguide-index/modules/extensions/pages/index/commandlog/jpa/IsisModuleExtCommandLogPersistenceJpa.adoc
@@ -9,6 +9,7 @@
 class IsisModuleExtCommandLogPersistenceJpa {
   public static final String NAMESPACE;
   public static final String SCHEMA;
+  FixtureScript getTeardownFixture()
 }
 ----
 
