--- a/antora/components/refguide-index/modules/extensions/pages/index/commandreplay/secondary/mixins/CommandLogEntry_replayQueue.adoc
+++ b/antora/components/refguide-index/modules/extensions/pages/index/commandreplay/secondary/mixins/CommandLogEntry_replayQueue.adoc
@@ -7,7 +7,7 @@
 .CommandLogEntry_replayQueue.java
 ----
 class CommandLogEntry_replayQueue {
-  List<CommandLogEntry> coll()
+  List<? extends CommandLogEntry> coll()
   boolean hideColl()
 }
 ----
