--- a/antora/components/refguide-index/modules/extensions/pages/index/executionoutbox/jpa/IsisModuleExtExecutionOutboxPersistenceJpa.adoc
+++ b/antora/components/refguide-index/modules/extensions/pages/index/executionoutbox/jpa/IsisModuleExtExecutionOutboxPersistenceJpa.adoc
@@ -9,6 +9,7 @@
 class IsisModuleExtExecutionOutboxPersistenceJpa {
   public static final String NAMESPACE;
   public static final String SCHEMA;
+  FixtureScript getTeardownFixture()
 }
 ----
 
