--- a/antora/components/refguide-index/modules/extensions/pages/index/secman/jpa/IsisModuleExtSecmanPersistenceJpa.adoc
+++ b/antora/components/refguide-index/modules/extensions/pages/index/secman/jpa/IsisModuleExtSecmanPersistenceJpa.adoc
@@ -7,6 +7,7 @@
 .IsisModuleExtSecmanPersistenceJpa.java
 ----
 class IsisModuleExtSecmanPersistenceJpa {
+  FixtureScript getTeardownFixture()
 }
 ----
 
