--- a/antora/components/refguide-index/modules/applib/pages/index/services/iactnlayer/InteractionContext.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/services/iactnlayer/InteractionContext.adoc
@@ -17,6 +17,7 @@ class InteractionContext {
   UnaryOperator<InteractionContext> switchTimeZone(ZoneId timeZone)     // <.>
   UnaryOperator<T> combine(UnaryOperator<T>... mappers)     // <.>
   UnaryOperator<T> combine(Stream<UnaryOperator<T>> mappers)     // <.>
+  ZoneOffset getTimeZoneOffsetNow()     // <.>
 }
 ----
 
@@ -54,6 +55,11 @@ Convenience method to combine _UnaryOperator_ s, for example as per _#switchUser
 +
 --
 Convenience method to combine _UnaryOperator_ s, for example as per _#switchUser(UserMemento)_ and _#switchTimeZone(ZoneId)_ . credit: https://stackoverflow.com/a/51065029/56880
+--
+<.> xref:#getTimeZoneOffsetNow_[getTimeZoneOffsetNow()]
++
+--
+Returns the _ZoneOffset_ at the current time _Instant_ (at which _ZoneId_ rules apply to calculate the offset).
 --
 
 == Members
@@ -94,3 +100,8 @@ NOTE: this implementation can result in heap pollution; better to use the _#comb
 === combine(Stream)
 
 Convenience method to combine _UnaryOperator_ s, for example as per _#switchUser(UserMemento)_ and _#switchTimeZone(ZoneId)_ . credit: https://stackoverflow.com/a/51065029/56880
+
+[#getTimeZoneOffsetNow_]
+=== getTimeZoneOffsetNow()
+
+Returns the _ZoneOffset_ at the current time _Instant_ (at which _ZoneId_ rules apply to calculate the offset).
