--- a/antora/components/refguide-index/modules/extensions/pages/index/fullcalendar/applib/IsisModuleExtFullCalendarApplib.adoc
+++ b/antora/components/refguide-index/modules/extensions/pages/index/fullcalendar/applib/IsisModuleExtFullCalendarApplib.adoc
@@ -7,6 +7,7 @@
 .IsisModuleExtFullCalendarApplib.java
 ----
 class IsisModuleExtFullCalendarApplib {
+  public static final String NAMESPACE;
 }
 ----
 
