--- a/antora/components/refguide-index/modules/viewer/pages/index/restfulobjects/applib/IsisModuleViewerRestfulObjectsApplib.adoc
+++ b/antora/components/refguide-index/modules/viewer/pages/index/restfulobjects/applib/IsisModuleViewerRestfulObjectsApplib.adoc
@@ -7,6 +7,7 @@
 .IsisModuleViewerRestfulObjectsApplib.java
 ----
 class IsisModuleViewerRestfulObjectsApplib {
+  public static final String NAMESPACE;
 }
 ----
 
