ISIS-3097: remove aritfact 'isis-valuetypes-prism-vaadin'
- instead moves the (single) utility class to vaadin-ui

--- a/antora/components/relnotes/modules/ROOT/pages/2022/2.0.0-M8/mignotes.adoc
+++ b/antora/components/relnotes/modules/ROOT/pages/2022/2.0.0-M8/mignotes.adoc
@@ -213,4 +213,9 @@ import org.apache.isis.viewer.restfulobjects.client.RestfulClientConfig;
 	<groupId>org.apache.isis.valuetypes</groupId>
 	<artifactId>isis-valuetypes-prism-wicket</artifactId>
 -->
+
+<!-- removed
+	<groupId>org.apache.isis.valuetypes</groupId>
+	<artifactId>isis-valuetypes-prism-vaadin</artifactId>
+-->
 ----
